# Lab6

./: CMakeLists.txt  class.cpp  functions.h  lab6.cpp  main.cpp  test.cpp
